{{$NEXT}}

0.16_1    2013-09-10 00:16:59 Europe/Minsk
    [Fix] Do not include POSIX in dependencies.

0.16      2013-09-10 00:04:16 Europe/Minsk
    Added GenericExecutor Watcher to periodically execute arbitrary command
    	  and watch/view it's output
    The watcher's unique_id generation algorithm changed to handle correctly
    	  deep configuration structures.
    [API] Watcher Memory now stores 'active' state of Watcher
    [API] Watcher role now requires 'callback' parameter in instance construction,
    	  'start' method does not takes the callback as 2nd parameter any more

0.15      2013-08-31 23:01:57 Europe/Minsk
    Ping Watcher now supports ICMP ping (via Net::Ping::External) as well as TCP knock 
    [API] Watcher has 'build_watcher_guard' method, which is responsible for constructing 
          AnyEvent-based guard (AnyEvent->timer etc.) 
    [API] Watcher role now has 'Describable' role
    [API] Watcher role now has 'force_poll' and 'start' methods
    [API] Describable role now has 'describe', 'describer' and 'description' methods

0.14_01   2013-08-26 20:23:25 Europe/Minsk
    [fix] Build on older ExtUtils::MakeMaker (RT #88080)
    FileTail watcher was seperated as Linux-specific into App::PerlWatcher::Watcher::FileTail

0.14      2013-08-24 17:27:29 Europe/Minsk
    Relased to CPAN
    Make the default/sample config more adequate for default installation
    [fix] File watcher: don't die, if tracked file can't be found
    [fix] Added missing dependencies

0.13      2013-08-18 17:13:20 Europe/Minsk
    Added POD documentation
    Added Openable role to make RSS-news items openable in browser
    Finalize Mooification 
    [API change] Engine does not takes an backend_id any more, provide the backend instance
    	 	 for that. Added Backend role for that.
    [API change] The available leves are exported via App::PerlWatcher::Levels now

0.12      2013-07-30 17:26:47 Europe/Minsk
    Updated Sortable to 2.45