@@ -1,5 +1,5 @@
 name        = App-PerlWatcher-Engine
-version     = 0.16_1
+version     = 0.17
 abstract    = Desktop nagios-inspired events watcher/notifier 
 author      = Ivan Baidakou <dmol@gmx.com>
 license     = Perl_5
